@@ -71,7 +71,7 @@ public class TagServiceImpl implements TagService {
         if (!"".equals(ids) && ids != null) {
             String[] idarray = ids.split(",");
             for (int i=0; i < idarray.length;i++) {
-                list.add(new Long(idarray[i]));
+                list.add(Long.valueOf(idarray[i]));
             }
         }
         return list;
